--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -49,7 +49,7 @@
   }
   ul {
     font-size: 4em;
-/*	  font-size: 4.5vw; */
+	  font-size: 4.5vw;
     line-height: 1em;
     margin: 0;
 	  padding: 0;
