--- a/css/styles.css
+++ b/css/styles.css
@@ -2513,4 +2513,9 @@ tr.selected td {
   background: none repeat scroll 0 0 #717272;
 }
 
+/* line 104, ../sass/_varisco.scss */
+.masonry-item {
+  width: 48%;
+}
+
 /* @import "theme-B"; */
