page min-height

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -8,6 +8,7 @@
   background: none repeat scroll 0 0 $light-gray;
   margin-bottom: 20px;
   margin-top: 20px;
+  min-height: 500px;
 }
 .header__site-name,#block-system-main-menu h2 {
   font-size: 1em;
