--- a/css/styles.css
+++ b/css/styles.css
@@ -2398,31 +2398,32 @@ tr.selected td {
   background: none repeat scroll 0 0 #E5E5E5;
   margin-bottom: 20px;
   margin-top: 20px;
+  min-height: 500px;
 }
 
-/* line 12, ../sass/_varisco.scss */
+/* line 13, ../sass/_varisco.scss */
 .header__site-name, #block-system-main-menu h2 {
   font-size: 1em;
   line-height: 1.5em;
   font-weight: normal;
 }
 
-/* line 17, ../sass/_varisco.scss */
+/* line 18, ../sass/_varisco.scss */
 .views-field-title {
   color: #DA6A27;
 }
 
-/* line 20, ../sass/_varisco.scss */
+/* line 21, ../sass/_varisco.scss */
 #content {
   margin-top: 0em;
 }
 
-/* line 23, ../sass/_varisco.scss */
+/* line 24, ../sass/_varisco.scss */
 .page__title {
   display: none;
 }
 
-/* line 26, ../sass/_varisco.scss */
+/* line 27, ../sass/_varisco.scss */
 .page-node .page__title {
   color: #DA6A27;
   display: block;
@@ -2430,32 +2431,32 @@ tr.selected td {
   text-transform: uppercase;
 }
 
-/* line 32, ../sass/_varisco.scss */
+/* line 33, ../sass/_varisco.scss */
 .field-name-field-project-description {
   border-top: 1px solid #9C9A9A;
   border-bottom: 1px solid #9C9A9A;
   color: #494849;
 }
 
-/* line 37, ../sass/_varisco.scss */
+/* line 38, ../sass/_varisco.scss */
 .view-project-client {
   text-transform: uppercase;
 }
-/* line 39, ../sass/_varisco.scss */
+/* line 40, ../sass/_varisco.scss */
 .view-project-client a {
   color: #DA6A27;
 }
 
-/* line 43, ../sass/_varisco.scss */
+/* line 44, ../sass/_varisco.scss */
 #block-block-1 {
   font-size: 0.7em;
 }
 
-/* line 47, ../sass/_varisco.scss */
+/* line 48, ../sass/_varisco.scss */
 #block-system-main-menu h2 {
   display: none;
 }
-/* line 50, ../sass/_varisco.scss */
+/* line 51, ../sass/_varisco.scss */
 #block-system-main-menu ul {
   font-size: 4em;
   font-size: 4.5vw;
@@ -2464,58 +2465,58 @@ tr.selected td {
   padding: 0;
   text-transform: uppercase;
 }
-/* line 58, ../sass/_varisco.scss */
+/* line 59, ../sass/_varisco.scss */
 #block-system-main-menu ul li {
   list-style: none;
   list-style-position: outside;
 }
-/* line 61, ../sass/_varisco.scss */
+/* line 62, ../sass/_varisco.scss */
 #block-system-main-menu ul li a {
   color: #717272;
   text-decoration: none;
 }
-/* line 65, ../sass/_varisco.scss */
+/* line 66, ../sass/_varisco.scss */
 #block-system-main-menu ul li a:hover, #block-system-main-menu ul li a.active-trail {
   color: #DA6A27;
 }
 
-/* line 72, ../sass/_varisco.scss */
+/* line 73, ../sass/_varisco.scss */
 .mean-container .mean-bar {
   background: none repeat scroll 0 0 transparent;
 }
-/* line 75, ../sass/_varisco.scss */
+/* line 76, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 77, ../sass/_varisco.scss */
+/* line 78, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span {
   background: none repeat scroll 0 0 #FFFFFF;
   display: block;
 }
-/* line 81, ../sass/_varisco.scss */
+/* line 82, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span.mean-head {
   background: none repeat scroll 0 0 transparent;
   color: #FFFFFF;
 }
-/* line 86, ../sass/_varisco.scss */
+/* line 87, ../sass/_varisco.scss */
 .mean-container .mean-nav {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 88, ../sass/_varisco.scss */
+/* line 89, ../sass/_varisco.scss */
 .mean-container .mean-nav h2 {
   color: #FFFFFF;
 }
-/* line 91, ../sass/_varisco.scss */
+/* line 92, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a {
   background: none repeat scroll 0 0 #717272;
   color: #FFFFFF;
 }
-/* line 95, ../sass/_varisco.scss */
+/* line 96, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a:hover {
   background: none repeat scroll 0 0 #717272;
   color: #DA6A27;
 }
-/* line 99, ../sass/_varisco.scss */
+/* line 100, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a.mean-expand:hover {
   background: none repeat scroll 0 0 #717272;
 }
