masonry-item padding

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -55,6 +55,7 @@ $zen-auto-include-item-base: false;
   @include zen-grid-container();
 }
  .masonry-item {
+    padding: 20px;
     width: 100%;
   }
 
@@ -83,6 +84,7 @@ $zen-auto-include-item-base: false;
 
   $zen-columns: 3!global;
  .masonry-item {
+    padding: 20px;
     width: 40%;
   }
  
@@ -217,7 +219,9 @@ $zen-auto-include-item-base: false;
 
   $zen-columns: 5!global;
   .masonry-item {
+    padding: 20px;
     width: 20%;
+    padding: 20px;
   }
   #page {
     //@include zen-grid-background();
