--- a/css/styles.css
+++ b/css/styles.css
@@ -2396,37 +2396,42 @@ tr.selected td {
  * _varisco.scss has customization for Tom Varisco Designs.
  *
  */
-/* line 7, ../sass/_varisco.scss */
+/* line 6, ../sass/_varisco.scss */
+html {
+  height: 100%;
+}
+
+/* line 9, ../sass/_varisco.scss */
 #page {
   background: none repeat scroll 0 0 #E5E5E5;
   margin-bottom: 20px;
   margin-top: 20px;
-  min-height: 500px;
+  min-height: 80%;
 }
 
-/* line 13, ../sass/_varisco.scss */
+/* line 15, ../sass/_varisco.scss */
 .header__site-name, #block-system-main-menu h2 {
   font-size: 1em;
   line-height: 1.5em;
   font-weight: normal;
 }
 
-/* line 18, ../sass/_varisco.scss */
+/* line 20, ../sass/_varisco.scss */
 .views-field-title {
   color: #DA6A27;
 }
 
-/* line 21, ../sass/_varisco.scss */
+/* line 23, ../sass/_varisco.scss */
 #content {
   margin-top: 0em;
 }
 
-/* line 24, ../sass/_varisco.scss */
+/* line 26, ../sass/_varisco.scss */
 .page__title {
   display: none;
 }
 
-/* line 27, ../sass/_varisco.scss */
+/* line 29, ../sass/_varisco.scss */
 .page-node .page__title {
   color: #DA6A27;
   display: block;
@@ -2434,32 +2439,32 @@ tr.selected td {
   text-transform: uppercase;
 }
 
-/* line 33, ../sass/_varisco.scss */
+/* line 35, ../sass/_varisco.scss */
 .field-name-field-project-description {
   border-top: 1px solid #9C9A9A;
   border-bottom: 1px solid #9C9A9A;
   color: #494849;
 }
 
-/* line 38, ../sass/_varisco.scss */
+/* line 40, ../sass/_varisco.scss */
 .view-project-client {
   text-transform: uppercase;
 }
-/* line 40, ../sass/_varisco.scss */
+/* line 42, ../sass/_varisco.scss */
 .view-project-client a {
   color: #DA6A27;
 }
 
-/* line 44, ../sass/_varisco.scss */
+/* line 46, ../sass/_varisco.scss */
 #block-block-1 {
   font-size: 0.7em;
 }
 
-/* line 48, ../sass/_varisco.scss */
+/* line 50, ../sass/_varisco.scss */
 #block-system-main-menu h2 {
   display: none;
 }
-/* line 51, ../sass/_varisco.scss */
+/* line 53, ../sass/_varisco.scss */
 #block-system-main-menu ul {
   font-size: 4em;
   font-size: 4.5vw;
@@ -2468,58 +2473,58 @@ tr.selected td {
   padding: 0;
   text-transform: uppercase;
 }
-/* line 59, ../sass/_varisco.scss */
+/* line 61, ../sass/_varisco.scss */
 #block-system-main-menu ul li {
   list-style: none;
   list-style-position: outside;
 }
-/* line 62, ../sass/_varisco.scss */
+/* line 64, ../sass/_varisco.scss */
 #block-system-main-menu ul li a {
   color: #717272;
   text-decoration: none;
 }
-/* line 66, ../sass/_varisco.scss */
+/* line 68, ../sass/_varisco.scss */
 #block-system-main-menu ul li a:hover, #block-system-main-menu ul li a.active-trail {
   color: #DA6A27;
 }
 
-/* line 73, ../sass/_varisco.scss */
+/* line 75, ../sass/_varisco.scss */
 .mean-container .mean-bar {
   background: none repeat scroll 0 0 transparent;
 }
-/* line 76, ../sass/_varisco.scss */
+/* line 78, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 78, ../sass/_varisco.scss */
+/* line 80, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span {
   background: none repeat scroll 0 0 #FFFFFF;
   display: block;
 }
-/* line 82, ../sass/_varisco.scss */
+/* line 84, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span.mean-head {
   background: none repeat scroll 0 0 transparent;
   color: #FFFFFF;
 }
-/* line 87, ../sass/_varisco.scss */
+/* line 89, ../sass/_varisco.scss */
 .mean-container .mean-nav {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 89, ../sass/_varisco.scss */
+/* line 91, ../sass/_varisco.scss */
 .mean-container .mean-nav h2 {
   color: #FFFFFF;
 }
-/* line 92, ../sass/_varisco.scss */
+/* line 94, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a {
   background: none repeat scroll 0 0 #717272;
   color: #FFFFFF;
 }
-/* line 96, ../sass/_varisco.scss */
+/* line 98, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a:hover {
   background: none repeat scroll 0 0 #717272;
   color: #DA6A27;
 }
-/* line 100, ../sass/_varisco.scss */
+/* line 102, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a.mean-expand:hover {
   background: none repeat scroll 0 0 #717272;
 }
