--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -3,14 +3,14 @@
  * _varisco.scss has customization for Tom Varisco Designs.
  *
  */
-html {
+html,body {
   height: 100%;
 }
 #page {
   background: none repeat scroll 0 0 $light-gray;
   margin-bottom: 20px;
   margin-top: 20px;
-  min-height: 80%;
+  min-height: 90%;
 }
 .header__site-name,#block-system-main-menu h2 {
   font-size: 1em;
