--- a/css/styles.css
+++ b/css/styles.css
@@ -2406,7 +2406,7 @@ html, body {
   background: none repeat scroll 0 0 #E5E5E5;
   margin-bottom: 20px;
   margin-top: 20px;
-  min-height: 80%;
+  min-height: 100%;
 }
 
 /* line 15, ../sass/_varisco.scss */
@@ -2470,7 +2470,7 @@ html, body {
   font-size: 4.5vw;
   line-height: 1em;
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 10px;
   text-transform: uppercase;
 }
 /* line 61, ../sass/_varisco.scss */
