--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -3,8 +3,11 @@
  * _varisco.scss has customization for Tom Varisco Designs.
  *
  */
-html,body {
-  height: 99%;
+html {
+  height: 100%;
+}
+body {
+  height: 90%;
 }
 #page {
   background: none repeat scroll 0 0 $light-gray;
