--- a/sass/components/_misc.scss
+++ b/sass/components/_misc.scss
@@ -92,6 +92,7 @@
 /* Wrapper for website name and slogan. */
 .header__name-and-slogan {
   float: left;
+  padding-left: 10px;
 }
 
 /* The name of the website. */
