--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -91,6 +91,9 @@ $zen-auto-include-item-base: false;
   #page {
     //@include zen-grid-background();
   }
+  #main {
+    padding-top: 1em;
+  }
   /**
    * The layout when there is only one sidebar, the left one.
    */
@@ -224,6 +227,9 @@ $zen-auto-include-item-base: false;
   }
   #page {
     //@include zen-grid-background();
+  }
+  #main {
+    padding-top: 1em;
   }
   .region-highlighted {
   //  @include zen-grid-container($context: none);
