--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -19,6 +19,7 @@ body {
   font-size: 1em;
   line-height: 1em;
   font-weight: normal;
+  margin-bottom: 0.5em;
 }
 .views-field-title {
 	color: $dark-orange;
