--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -100,6 +100,7 @@ $lighter-gray: #9C9A9A;
 $med-gray: #636363;
 $dark-gray: #494849;
 $orange: #F15A24;
+$med-orange: #C15D21;
 $dark-orange: #DA6A27;
 
 
