--- a/css/styles.css
+++ b/css/styles.css
@@ -2483,8 +2483,9 @@ body {
 /* line 50, ../sass/_varisco.scss */
 #block-block-1 {
   font-size: 1em;
+  padding-left: 10px;
 }
-/* line 52, ../sass/_varisco.scss */
+/* line 53, ../sass/_varisco.scss */
 #block-block-1 p {
   color: #494849;
   font-weight: bold;
@@ -2492,20 +2493,20 @@ body {
   margin: 0;
   padding: 0;
 }
-/* line 59, ../sass/_varisco.scss */
+/* line 60, ../sass/_varisco.scss */
 #block-block-1 .studio-address {
   font-size: 0.75em;
 }
-/* line 66, ../sass/_varisco.scss */
+/* line 67, ../sass/_varisco.scss */
 #block-block-1 .studio-email a {
   color: #C15D21;
 }
 
-/* line 72, ../sass/_varisco.scss */
+/* line 73, ../sass/_varisco.scss */
 #block-system-main-menu h2 {
   display: none;
 }
-/* line 75, ../sass/_varisco.scss */
+/* line 76, ../sass/_varisco.scss */
 #block-system-main-menu ul {
   font-size: 4em;
   font-size: 4.5vw;
@@ -2514,58 +2515,58 @@ body {
   padding: 0 0 0 10px;
   text-transform: uppercase;
 }
-/* line 83, ../sass/_varisco.scss */
+/* line 84, ../sass/_varisco.scss */
 #block-system-main-menu ul li {
   list-style: none;
   list-style-position: outside;
 }
-/* line 86, ../sass/_varisco.scss */
+/* line 87, ../sass/_varisco.scss */
 #block-system-main-menu ul li a {
   color: #717272;
   text-decoration: none;
 }
-/* line 90, ../sass/_varisco.scss */
+/* line 91, ../sass/_varisco.scss */
 #block-system-main-menu ul li a:hover, #block-system-main-menu ul li a.active-trail {
   color: #DA6A27;
 }
 
-/* line 97, ../sass/_varisco.scss */
+/* line 98, ../sass/_varisco.scss */
 .mean-container .mean-bar {
   background: none repeat scroll 0 0 transparent;
 }
-/* line 100, ../sass/_varisco.scss */
+/* line 101, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 102, ../sass/_varisco.scss */
+/* line 103, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span {
   background: none repeat scroll 0 0 #FFFFFF;
   display: block;
 }
-/* line 106, ../sass/_varisco.scss */
+/* line 107, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span.mean-head {
   background: none repeat scroll 0 0 transparent;
   color: #FFFFFF;
 }
-/* line 111, ../sass/_varisco.scss */
+/* line 112, ../sass/_varisco.scss */
 .mean-container .mean-nav {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 113, ../sass/_varisco.scss */
+/* line 114, ../sass/_varisco.scss */
 .mean-container .mean-nav h2 {
   color: #FFFFFF;
 }
-/* line 116, ../sass/_varisco.scss */
+/* line 117, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a {
   background: none repeat scroll 0 0 #717272;
   color: #FFFFFF;
 }
-/* line 120, ../sass/_varisco.scss */
+/* line 121, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a:hover {
   background: none repeat scroll 0 0 #717272;
   color: #DA6A27;
 }
-/* line 124, ../sass/_varisco.scss */
+/* line 125, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a.mean-expand:hover {
   background: none repeat scroll 0 0 #717272;
 }
