--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -36,6 +36,10 @@ body {
   font-size: 1.25em;
   text-transform: uppercase;
 }
+.section-studio .page__title {
+  display: none;  
+}
+
 .field-name-field-project-description {
 	border-top: 1px solid $lighter-gray;
 	border-bottom: 1px solid $lighter-gray;
